# firebird

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md  TODO.md  breakpointwidget.cpp  breakpointwidget.h  cxii_cas_ref.avif  default.json  disassemblywidget.cpp  disassemblywidget.h  dockwidget.cpp  dockwidget.h  emuthread.cpp  firebird.pro  hexviewwidget.cpp  hexviewwidget.h  keyhistorywidget.cpp  keyhistorywidget.h  lcdwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portmonitorwidget.cpp  portmonitorwidget.h  powerpath.md  powerpath.qmd  qmlbridge.cpp  qmlbridge.h  qtframebuffer.cpp  qtkeypadbridge.cpp  qtkeypadbridge.h  registerwidget.cpp  registerwidget.h  resources.qrc  stackwidget.cpp  stackwidget.h  watchpointwidget.cpp  watchpointwidget.h
.github/workflows/: advisory.yml  android.yml  ios.yml  kdd-layout-validation.yml  macOS.yml  main.yml  web.yml  windows.yml
android/: build.gradle  gradle.properties
app/: baselinelayout.h  emuthread.cpp  emuthread.h  powercontrol.cpp  powercontrol.h  qmlbridge.cpp  qmlbridge.h
app/qmlbridge/: runtime.cpp  settings.cpp
cmake/: meta_build.cmake
core/: arm_interpreter.cpp  armsnippets_loader.c  asmcode.c  casplus.c  cpu.cpp  cx2.cpp  cx2.h  debug.cpp  debug_api.cpp  debug_api.h  debug_remote.cpp  des.c  disasm.c  emu.cpp  emu.h  flash.cpp  gdbstub.c  gdbstub.h  gif.cpp  interrupt.c  keypad.cpp  lcd.c  lcd.h  link.c  mem.c  mem.h  misc.c  misc.h  nand_fs.h  nspire_log_hook.cpp  schedule.c  schedule.h  serial.c  sha256.c  translate_aarch64.cpp  translate_arm.cpp  usb_cx2.cpp  usblink.c  usblink_cx2.h
core/cpu/: arm_interpreter.cpp  coproc.cpp  cpu.cpp  cpudefs.h  thumb_interpreter.cpp  translate_aarch64.cpp  translate_arm.cpp  translate_x86.c  translate_x86_64.c
core/crypto/: des.c  sha256.c
core/debug/: debug.cpp  debug.h  debug_api.cpp  debug_api.h  debug_api_peek.cpp  debug_cli.cpp  gdbstub.c  nspire_log_hook.cpp  nspire_log_hook.h
core/disassembly/: disasm.c  disasm.h
core/jit/: armsnippets.h  armsnippets_loader.c  asmcode.c  asmcode.h  asmcode_aarch64.S
core/memory/: flash.cpp  flash.h  mem.c  mem.h  mmu.c  mmu.h  nand_fs.cpp  nand_fs.h
core/os/: os-android.cpp  os-emscripten.c  os-linux.c  os-win32.c  os.h
core/peripherals/: cx2_peripherals.cpp  interrupt.c  interrupt.h  keypad.cpp  keypad.h  lcd.c  misc.c  misc.h  serial.c
core/power/: powercontrol.cpp
core/soc/: casplus.c  casplus.h  cx2.cpp  cx2.h
core/storage/: fieldparser.cpp  flash.cpp  nand_fs.cpp  nand_fs.h
core/tests/: fieldparsertest.cpp
core/timing/: schedule.c  schedule.h
core/usb/: usb.c  usb_cx2.cpp  usb_cx2.h  usb_cx2_state.cpp  usblink.c  usblink_cx2.cpp  usblink_queue.cpp  usblink_queue.h
debugger/: dockmanager.cpp  dockmanager.h  gotodialog.cpp
debugger/breakpoints/: breakpointwidget.cpp
debugger/console/: consolewidget.cpp  consolewidget.h  state.cpp
debugger/cyclecounter/: cyclecounterwidget.cpp  cyclecounterwidget.h
debugger/disassembly/: disassemblywidget.cpp  disassemblywidget.h
debugger/dockmanager/: state.cpp
debugger/hexview/: hexviewwidget.cpp  hexviewwidget.h
debugger/hwconfig/: hwconfigwidget.cpp  hwconfigwidget.h  state.cpp
debugger/keyhistory/: keyhistorywidget.cpp  keyhistorywidget.h
debugger/lcdstate/: lcdstatewidget.cpp  lcdstatewidget.h
debugger/memvisualizer/: memoryvisualizerwidget.cpp  memoryvisualizerwidget.h
debugger/nandbrowser/: nandbrowserwidget.cpp  nandbrowserwidget.h
debugger/portmonitor/: portmonitorwidget.cpp  portmonitorwidget.h
debugger/registers/: registerwidget.cpp  registerwidget.h
debugger/stack/: stackwidget.cpp
debugger/timermonitor/: timermonitorwidget.cpp  timermonitorwidget.h
debugger/watchpoints/: watchpointwidget.cpp  watchpointwidget.h
dialogs/: fbaboutdialog.cpp
docs/: DOCK_LAYOUT.md  IDA_INSTANT_DEBUGGING.md  KDDOCKWIDGETS_MIGRATION.md  KDD_VALIDATION_MATRIX.md  PROJECT_STRUCTURE.md  REFERENCE_MAP.md  STATE_SLOTS.md  THREADING.md  cx2-i2c-touchpad-transport.md  cx2-pmic-register-map.md  cx2-power-code-audit.md
emscripten/: Makefile  main.cpp
headless/: Makefile  main.cpp
mainwindow/: bootstrap.cpp  docks.cpp  layout_persistence.cpp  layout_persistence.h  runtime.cpp  theme.cpp
mainwindow/bootstrap/: startup.cpp
mainwindow/docks/: baseline.cpp  baseline.h  baselinelayout.h  connectivity.cpp  overlay.cpp  reset.cpp  setup.cpp
mainwindow/runtime/: actions.cpp  window.cpp
qml/: ConfigPageDebug.qml  ConfigPageEmulation.qml  ConfigPageFileTransfer.qml  ConfigPageKits.qml  ConfigPagesModel.qml  DrawerButton.qml  FBConfigDialog.qml  FlashDialog.qml  Keypad.qml  KitRoles.js  MobileUI.qml  MobileUIConfig.qml  MobileUIDrawer.qml  MobileUIFront.qml  NAlphaButton.qml  NBigButton.qml  NButton.qml  NDualButton.qml  NNumButton.qml  ScrollingKeypad.qml  SecondaryLabel.qml  SidebarButton.qml  SvgIcon.qml  SvgPaths.qml  Touchpad.qml
resources/macos/: firebird.entitlements
tests/: kdd_layout_test.cpp  layout_convert_test.cpp
tools/: dump_pmic_regs.c  extract_paths.py  g_elements.jsonl  layout_convert.cpp  regen_svg_paths.py  render_calc.py  render_calc_dxf.py  render_powerpath_diagrams.sh  symbols.html  ti_nspire_cx2.dxf
tools/ci/: check_reference_map.py  run_clang_tidy_advisory.sh  run_clazy.sh
tools/dev/: check_file_size.py
tools/devunit_folder/: ctb_freq.tns  deletedevcert.tns  devcert_off.tns  devcert_on.tns  devunit.cer.tns  help.tns  ini.tns  prap.tns  removedevfolder.tns  tt_start.tns  tt_stop.tns
tools/ida/: firebird_instant.py  firebird_load.py  firebird_plugin.py
transfer/: usblinktreewidget.cpp  usblinktreewidget.h
ui/: activitybar.cpp  ansitextwriter.cpp  dockbackend.cpp  dockbackend.h  dockstate.h  dockwidget.cpp  dockwidget.h  framebuffer.cpp  framebuffer.h  kdockwidget.cpp  kdockwidget.h  keypadbridge.cpp  lcdwidget.cpp  lcdwidget.h  materialicons.h  widgettheme.cpp  widgettheme.h
ui/docking/: dockbackend.cpp  dockbackend.h  dockmanager.cpp  dockmanager.h  dockmanager_state.cpp  dockwidget.h  kdockwidget.cpp  kdockwidget.h
ui/input/: keypadbridge.cpp  keypadbridge.h
web-qt/: CMakeLists.txt  README.md
(+110 files in other folders)
